# name-unrelated

./: Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
configs/: layout_config.yaml  ocr_config.yaml  stamp_detection.yaml
pipeline/: batch_processor.py
src/: cli.py  pipeline.py
src/extraction/: layout_analysis.py  table_handling.py  text_extraction.py
src/name_unrelated.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/preprocessing/: pdf_to_image.py
src/utils/: config_loader.py
